# bolt-v2

./: .gitignore  .no-mistakes.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  PROCESS.md  REASONIX.md  SESSION-STATE.md  deny.toml  diff.txt  diff_6cbb.txt  diff_853b.txt  diff_all.txt  diff_full.txt  diff_head.txt  full_diff.txt  justfile  opencode.json  pr_diff.txt  test_base64.rs  test_err.txt
.claude/: rust-verification.toml
.config/: nextest.toml
.cursor/rules/: graphify.mdc
.githooks/: post-checkout
.github/: dependabot.yml
.github/nt-pointer-probe/: advisory_issue.md  draft_pr.md
.github/requirements/: source-fence.txt
.github/workflows/: advisory.yml  ci-docs-pass-stub.yml  ci.yml  stale.yml  summary.yml  (+5 more)
.specify/: feature.json  init-options.json  integration.json
Tasks/: next-session-deploy.md  next-session-featherwriter.md  next-session-prompt.md  next-session-root-volume-remediation.md
config/: example.toml  live.local.example.toml  root.example.toml
contracts/: polymarket.toml
deploy/: README.md  install.sh
docs/: bolt-v3-contract-ledger.md  bolt-v3-design.md  bolt-v3-runtime-contracts.md  bolt-v3-schema.md  issue-118-runtime-fallback-contract.md  issue-126-postmortem-2026-04-12.md  issue-221-replacement-host-parity.md  issue-222-host-inventory.md  issue-223-monitoring-contract.md  issue-224-candidate-host-validation.md  issue-33-coverage-matrix.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_semantic.json  GRAPH_REPORT.md  graph.html  graph.json
patches/nautilus_trader_pinned/: Cargo.toml
patches/nautilus_trader_pinned/crates/adapters/polymarket/: Cargo.toml
patches/nautilus_trader_pinned/crates/adapters/polymarket/src/: data.rs
patches/nautilus_trader_pinned/crates/adapters/polymarket/src/execution/: mod.rs  parse.rs  submitter.rs
patches/nautilus_trader_pinned/crates/adapters/polymarket/src/websocket/: client.rs  parse.rs
patches/nautilus_trader_pinned/crates/adapters/polymarket/tests/: exec_client.rs
scripts/: ci_tracked_mtime_manifest.py  find_same_sha_main_evidence.py  install_ci_rust_verification_owner.sh  nt_pin_block_guard.sh  require_rust_verification_owner.sh  test_find_same_sha_main_evidence.py  test_verify_bolt_v3_core_boundary.py  test_verify_bolt_v3_credential_log_suppression_literals.py  test_verify_bolt_v3_decision_event_test_literals.py  test_verify_bolt_v3_existing_strategy_runtime_literals.py  test_verify_bolt_v3_fake_secret_test_literals.py  test_verify_bolt_v3_fixture_client_ids.py  test_verify_bolt_v3_fixture_strategy_targets.py  test_verify_bolt_v3_forbidden_env_test_literals.py  test_verify_bolt_v3_inline_toml_fixtures.py  test_verify_bolt_v3_instrument_fixture_literals.py  test_verify_bolt_v3_legacy_default_fence.py  test_verify_bolt_v3_naming.py  test_verify_bolt_v3_nucleus_admission.py  test_verify_bolt_v3_protocol_mock_payloads.py  test_verify_bolt_v3_provider_leaks.py  test_verify_bolt_v3_pure_rust_runtime.py  test_verify_bolt_v3_reference_policy_literals.py  test_verify_bolt_v3_runtime_literals.py  test_verify_bolt_v3_scale_process_literals.py  test_verify_bolt_v3_status_map_current.py  test_verify_bolt_v3_strategy_policy_fence.py  test_verify_bolt_v3_test_literal_smoke.py  test_verify_bolt_v3_toml_fixture_inventory.py  test_verify_ci_path_filters.py  test_verify_ci_workflow_hygiene.py  test_verify_runtime_capture_yaml.py  verify_bolt_v3_core_boundary.py  verify_bolt_v3_credential_log_suppression_literals.py  verify_bolt_v3_decision_event_test_literals.py  verify_bolt_v3_existing_strategy_runtime_literals.py  verify_bolt_v3_fake_secret_test_literals.py  verify_bolt_v3_fixture_client_ids.py  verify_bolt_v3_fixture_strategy_targets.py  verify_bolt_v3_forbidden_env_test_literals.py  (+18 more)
src/: bolt_v3_adapters.rs  bolt_v3_client_registration.rs  bolt_v3_config.rs  bolt_v3_decision_event_context.rs  bolt_v3_decision_events.rs  bolt_v3_decision_evidence.rs  bolt_v3_instrument_filters.rs  bolt_v3_instrument_readiness.rs  bolt_v3_live_canary_gate.rs  bolt_v3_live_node.rs  bolt_v3_market_identity.rs  bolt_v3_no_submit_readiness.rs  bolt_v3_no_submit_readiness_schema.rs  bolt_v3_order_intent_gate.rs  bolt_v3_readiness.rs  bolt_v3_reference_actor_registration.rs  bolt_v3_reference_policy.rs  bolt_v3_reference_producer.rs  bolt_v3_release_identity.rs  bolt_v3_secrets.rs  bolt_v3_start_readiness.rs  bolt_v3_strategy_decision_evidence.rs  bolt_v3_strategy_order_intent.rs  bolt_v3_strategy_registration.rs  bolt_v3_submit_admission.rs  bolt_v3_tiny_canary_evidence.rs  bolt_v3_validate.rs  bounded_config_read.rs  config.rs  delivery_validator.rs  execution_state.rs  lake_batch.rs  lib.rs  live_config.rs  live_config_impl.rs  live_node_setup.rs  log_sweep.rs  main.rs  normalized_sink.rs  nt_runtime_capture.rs  (+9 more)
tests/: audit_records.rs  bolt_v3_adapter_mapping.rs  bolt_v3_chainlink_external_delivery_boundary.rs  bolt_v3_cli.rs  bolt_v3_client_registration.rs  bolt_v3_controlled_connect.rs  bolt_v3_credential_log_suppression.rs  bolt_v3_decision_event_context.rs  bolt_v3_decision_event_handoff.rs  bolt_v3_decision_evidence.rs  bolt_v3_instrument_filters.rs  bolt_v3_instrument_gate.rs  bolt_v3_instrument_readiness.rs  bolt_v3_live_canary_gate.rs  bolt_v3_market_identity.rs  bolt_v3_naming_contract.rs  bolt_v3_no_submit_readiness.rs  bolt_v3_no_submit_readiness_operator.rs  bolt_v3_order_intent_gate.rs  bolt_v3_order_lifecycle_tracer.rs  bolt_v3_polymarket_external_execution_boundary.rs  bolt_v3_polymarket_fee_provider.rs  bolt_v3_production_entrypoint.rs  bolt_v3_production_run_gate.rs  bolt_v3_provider_binding.rs  bolt_v3_readiness.rs  bolt_v3_reconciliation_restart.rs  bolt_v3_reference_actor_registration.rs  bolt_v3_reference_delivery.rs  bolt_v3_reference_policy.rs  bolt_v3_reference_producer.rs  bolt_v3_release_identity.rs  bolt_v3_scale_process.rs  bolt_v3_start_readiness_gate.rs  bolt_v3_strategy_registration.rs  bolt_v3_submit_admission.rs  bolt_v3_tiny_canary_operator.rs  bolt_v3_tiny_canary_preconditions.rs  ci_same_sha_smoke_tag.rs  cli.rs  (+31 more)
(+449 files in other folders)
